# do-it

./: .env.example  .gitignore  README.md  media_seed_export.json  pyproject.toml  requirements-crawl.txt  requirements.txt  run.py  stream_voh.sh  transcribe_bg.sh  transcribe_stream.py
api/: __init__.py  llm_provider.py  main.py  media_score.py  media_seed_export.py  prompts.py  requirements.txt  whisper_transcribe.py
openapi/: openapi.json  road-score.yaml
radio_hls/: __init__.py  __main__.py  hls_stream.py  transcribe.py
script/: crawl.sh  host-api.sh
scripts/: export_openapi_json.py  media_seed_crawl.py
